// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JSONData/> test should render array correctly for multiline 1`] = `
<div>
  <div
    class="JSONData-root-43 JSONData-multiline-44"
  >
    <span
      class="JSONData-openBrace-47"
    >
      [
    </span>
    <span
      class="JSONData-closure-45"
    >
      <span
        class="JSONData-entry-46"
      >
        <span
          class="JSONData-openBrace-47"
        >
          {
        </span>
        <span
          class="JSONData-closure-45"
        >
          <span
            class="JSONData-entry-46"
          >
            <span
              class="JSONData-jsonKey-50"
            >
              a
              : 
            </span>
            <span
              class="JSONData-number-51"
            >
              1
            </span>
            <span
              class="JSONData-comma-49"
            >
              ,
            </span>
          </span>
          <span
            class="JSONData-entry-46"
          >
            <span
              class="JSONData-jsonKey-50"
            >
              b
              : 
            </span>
            <span
              class="JSONData-openBrace-47"
            >
              {
            </span>
            <span
              class="JSONData-closure-45"
            >
              <span
                class="JSONData-entry-46"
              >
                <span
                  class="JSONData-jsonKey-50"
                >
                  c
                  : 
                </span>
                <span
                  class="JSONData-string-54"
                >
                  foo
                </span>
              </span>
            </span>
            <span
              class="JSONData-closeBrace-48"
            >
              }
            </span>
          </span>
        </span>
        <span
          class="JSONData-closeBrace-48"
        >
          }
        </span>
        <span
          class="JSONData-comma-49"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-46"
      >
        <span
          class="JSONData-openBrace-47"
        >
          {
        </span>
        <span
          class="JSONData-closure-45"
        >
          <span
            class="JSONData-entry-46"
          >
            <span
              class="JSONData-jsonKey-50"
            >
              a
              : 
            </span>
            <span
              class="JSONData-number-51"
            >
              3
            </span>
            <span
              class="JSONData-comma-49"
            >
              ,
            </span>
          </span>
          <span
            class="JSONData-entry-46"
          >
            <span
              class="JSONData-jsonKey-50"
            >
              b
              : 
            </span>
            <span
              class="JSONData-null-52"
            >
              null
            </span>
          </span>
        </span>
        <span
          class="JSONData-closeBrace-48"
        >
          }
        </span>
      </span>
    </span>
    <span
      class="JSONData-closeBrace-48"
    >
      ]
    </span>
  </div>
</div>
`;

exports[`<JSONData/> test should render array correctly for single line 1`] = `
<div>
  <div
    class="JSONData-root-29"
  >
    <span
      class="JSONData-openBrace-33"
    >
      [
    </span>
    <span
      class="JSONData-closure-31"
    >
      <span
        class="JSONData-entry-32"
      >
        <span
          class="JSONData-string-40"
        >
          some text
        </span>
        <span
          class="JSONData-comma-35"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-32"
      >
        <span
          class="JSONData-string-40"
        >
          some other text
        </span>
      </span>
    </span>
    <span
      class="JSONData-closeBrace-34"
    >
      ]
    </span>
  </div>
</div>
`;

exports[`<JSONData/> test should render correctly for multiline 1`] = `
<div>
  <div
    class="JSONData-root-15 JSONData-multiline-16"
  >
    <span
      class="JSONData-openBrace-19"
    >
      {
    </span>
    <span
      class="JSONData-closure-17"
    >
      <span
        class="JSONData-entry-18"
      >
        <span
          class="JSONData-jsonKey-22"
        >
          testString
          : 
        </span>
        <span
          class="JSONData-string-26"
        >
          a
        </span>
        <span
          class="JSONData-comma-21"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-18"
      >
        <span
          class="JSONData-jsonKey-22"
        >
          testNum
          : 
        </span>
        <span
          class="JSONData-number-23"
        >
          10
        </span>
        <span
          class="JSONData-comma-21"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-18"
      >
        <span
          class="JSONData-jsonKey-22"
        >
          testNull
          : 
        </span>
        <span
          class="JSONData-null-24"
        >
          null
        </span>
        <span
          class="JSONData-comma-21"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-18"
      >
        <span
          class="JSONData-jsonKey-22"
        >
          testJSON
          : 
        </span>
        <span
          class="JSONData-openBrace-19"
        >
          {
        </span>
        <span
          class="JSONData-closure-17"
        >
          <span
            class="JSONData-entry-18"
          >
            <span
              class="JSONData-jsonKey-22"
            >
              hello
              : 
            </span>
            <span
              class="JSONData-string-26"
            >
              world
            </span>
          </span>
        </span>
        <span
          class="JSONData-closeBrace-20"
        >
          }
        </span>
      </span>
    </span>
    <span
      class="JSONData-closeBrace-20"
    >
      }
    </span>
  </div>
</div>
`;

exports[`<JSONData/> test should render correctly for single line 1`] = `
<div>
  <div
    class="JSONData-root-1"
  >
    <span
      class="JSONData-openBrace-5"
    >
      {
    </span>
    <span
      class="JSONData-closure-3"
    >
      <span
        class="JSONData-entry-4"
      >
        <span
          class="JSONData-jsonKey-8"
        >
          testString
          : 
        </span>
        <span
          class="JSONData-string-12"
        >
          a
        </span>
        <span
          class="JSONData-comma-7"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-4"
      >
        <span
          class="JSONData-jsonKey-8"
        >
          testNum
          : 
        </span>
        <span
          class="JSONData-number-9"
        >
          10
        </span>
        <span
          class="JSONData-comma-7"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-4"
      >
        <span
          class="JSONData-jsonKey-8"
        >
          testNull
          : 
        </span>
        <span
          class="JSONData-null-10"
        >
          null
        </span>
        <span
          class="JSONData-comma-7"
        >
          ,
        </span>
      </span>
      <span
        class="JSONData-entry-4"
      >
        <span
          class="JSONData-jsonKey-8"
        >
          testJSON
          : 
        </span>
        <span
          class="JSONData-openBrace-5"
        >
          {
        </span>
        <span
          class="JSONData-closure-3"
        >
          <span
            class="JSONData-entry-4"
          >
            <span
              class="JSONData-jsonKey-8"
            >
              hello
              : 
            </span>
            <span
              class="JSONData-string-12"
            >
              world
            </span>
          </span>
        </span>
        <span
          class="JSONData-closeBrace-6"
        >
          }
        </span>
      </span>
    </span>
    <span
      class="JSONData-closeBrace-6"
    >
      }
    </span>
  </div>
</div>
`;
